--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Bellefair|Libre+Barcode+39+Text|Saira|Ultra" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css">
   </head>
   <body>
     <style>
