created feed firectory and got review posts to work properly

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset='UTF-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Bellefair|Libre+Barcode+39+Text|Saira|Ultra" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Libre+Barcode+39+Text|Saira|Ultra" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css">
   </head>
