--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,6 @@
     <title>Sick Flick Nit Pickers</title>
     <meta charset='UTF-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
-    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Libre+Barcode+39+Text|Saira|Ultra" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css">
@@ -13,7 +12,8 @@
     <style>
       html, body {
         width: 100vw;
-        height: 100vh;
+        height: auto;
+        background-color: #2CFEC5;
         margin: 0;
       }
 
