--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       html, body {
         width: 100vw;
         height: auto;
-        background-color: #2CFEC5;
+        background-color: #D54B97;
         margin: 0;
       }
 
