added a service worker for better precache functionality with cloudflare, added small quality of life updates and update review redux functions

--- a/public/index.html
+++ b/public/index.html
@@ -24,4 +24,7 @@
     </style>
     <div id='root'></div>
   </body>
+  
+  <!-- Prompt a message in the browser if users disabled JS -->
+  <noscript>Your browser does not support JavaScript!</noscript>
 </html>
