updating front end with styling and routing updates, not ready for cms usage

--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,47 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Sick Flick Nit Pickers</title>
-    <meta charset='UTF-8'>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
-    <meta name="description" content="movie reviews by three nit pickers">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Libre+Barcode+39+Text|Saira|Ultra" rel="stylesheet">
-    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-    <link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css">
-  </head>
-  <body>
-    <style>
-      html, body {
-        width: 100vw;
-        height: auto;
-        background-color: #D54B97;
-        margin: 0;
-      }
 
-      p, h1, h2, h3, h4, h5, h6 {
-        margin: 0;
-      }
-    </style>
-    <div id='root'></div>
-  </body>
-  
-  <!-- Prompt a message in the browser if users disabled JS -->
-  <noscript>Your browser does not support JavaScript!</noscript>
+<head>
+  <title>Sick Flick Nit Pickers</title>
+  <meta charset='UTF-8'>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
+  <meta name="description" content="movie reviews by three nit pickers">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Libre+Barcode+39+Text|Saira|Ultra" rel="stylesheet">
+  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+  <link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css">
+  <link rel="apple-touch-icon" sizes="144x144" href="/public/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/public/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/public/favicon-16x16.png">
+  <link rel="manifest" href="/public/site.webmanifest">
+  <link rel="mask-icon" href="/public/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+</head>
+
+<body>
+  <style>
+    html,
+    body {
+      width: 100vw;
+      height: auto;
+      background-color: #D54B97;
+      margin: 0;
+    }
+
+    p,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      margin: 0;
+    }
+  </style>
+  <div id='root'></div>
+</body>
+
+<!-- Prompt a message in the browser if users disabled JS -->
+<noscript>Your browser does not support JavaScript!</noscript>
+
 </html>
